[gd_scene load_steps=7 format=2]

[ext_resource path="res://visuals/Lato-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/audio_bus.gd" type="Script" id=2]
[ext_resource path="res://audio/395138__noisyninja__footsteps-walking-through-woods.wav" type="AudioStream" id=3]
[ext_resource path="res://audio/415511__vannipat__melody-loop-mix-128-bpm.mp3" type="AudioStream" id=4]
[ext_resource path="res://audio/107750__tim-kahn__it-s-been-so-long.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
use_filter = true
font_data = ExtResource( 1 )

[node name="SeparateAudioBus" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -229.0
margin_top = -62.5
margin_right = 229.0
margin_bottom = 62.5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 458.0
margin_bottom = 39.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 175.0
margin_bottom = 39.0
rect_min_size = Vector2( 175, 0 )
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="VBoxContainer/HBoxContainer"]
margin_left = 179.0
margin_right = 379.0
margin_bottom = 39.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
value = 50.0

[node name="SFX" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 383.0
margin_right = 458.0
margin_bottom = 39.0
rect_min_size = Vector2( 75, 0 )
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "50"
align = 1
valign = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 43.0
margin_right = 458.0
margin_bottom = 82.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_right = 175.0
margin_bottom = 39.0
rect_min_size = Vector2( 175, 0 )
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "Music"

[node name="MusicSlider" type="HSlider" parent="VBoxContainer/HBoxContainer2"]
margin_left = 179.0
margin_right = 379.0
margin_bottom = 39.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
value = 50.0

[node name="Music" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 383.0
margin_right = 458.0
margin_bottom = 39.0
rect_min_size = Vector2( 75, 0 )
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "50"
align = 1
valign = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 86.0
margin_right = 458.0
margin_bottom = 125.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_right = 175.0
margin_bottom = 39.0
rect_min_size = Vector2( 175, 0 )
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "Dialog"

[node name="DialogSlider" type="HSlider" parent="VBoxContainer/HBoxContainer3"]
margin_left = 179.0
margin_right = 379.0
margin_bottom = 39.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
value = 50.0

[node name="Dialog" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_left = 383.0
margin_right = 458.0
margin_bottom = 39.0
rect_min_size = Vector2( 75, 0 )
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "50"
align = 1
valign = 1

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true
bus = "SFX"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true
bus = "Music"

[node name="Dialog" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true
bus = "Dialog"

[connection signal="value_changed" from="VBoxContainer/HBoxContainer/SFXSlider" to="." method="_on_SFXSlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer3/DialogSlider" to="." method="_on_DialogSlider_value_changed"]
